--- a/Mudboy.plist
+++ b/Mudboy.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://www.mudboy.com.cn/download/Mudboy.ipa</string>
+					<string>https://github.com/yaoBen/WeiboEasyDemo/blob/master/Mudboy.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
